mail chimp server implementation

--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start-client": "next start",
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "antd": "^3.19.2",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.14.0",
     "less": "^3.9.0",
     "less-vars-to-js": "^1.3.0",
     "next": "^8.1.0",
@@ -21,6 +25,7 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@zeit/next-less": "^1.0.1"
+    "@zeit/next-less": "^1.0.1",
+    "cross-env": "^5.2.0"
   }
 }
