--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "less-vars-to-js": "^1.3.0",
     "next": "^8.1.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@zeit/next-less": "^1.0.1",
