refactored for deploying in now

--- a/www/package.json
+++ b/www/package.json
@@ -7,7 +7,8 @@
     "dev": "node server.js",
     "build": "next build",
     "start-client": "next start",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "cross-env NODE_ENV=production node server.js",
+    "now-build": "next build"
   },
   "keywords": [],
   "author": "",
