updated with secrets in now secret env

--- a/now.json
+++ b/now.json
@@ -25,7 +25,7 @@
   ],
   "env": {
     "MAILCHIMP_APIKEY": "@mailchimp-api-key",
-    "MAILCHIMP_DC": "us18",
-    "MAILCHIMP_LISTID": "54c08eb83e"
+    "MAILCHIMP_DC": "@mailchimp-dc",
+    "MAILCHIMP_LISTID": "@mailchimp-list-id"
   }
 }
