--- a/www/.babelrc
+++ b/www/.babelrc
@@ -1,11 +1,14 @@
 {
-  "presets": ["next/babel"],
+  "presets": [
+    "next/babel"
+  ],
   "plugins": [
     [
-      "import", {
-      "libraryName": "antd",
-      "style": true
-    },
+      "import",
+      {
+        "libraryName": "antd",
+        "style": true
+      }
     ]
   ]
 }
